2004-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-out-of-band-prompt-regexp): Renamed to
	`tramp-process-alive-regexp', because its usage is widen.
	(tramp-actions-copy-out-of-band): Apply it.
	(tramp-actions-before-shell, tramp-multi-actions): Add
	`tramp-action-process-alive' action.
	(tramp-action-process-alive): New defun.
	(tramp-process-one-action, tramp-process-one-multi-action): Remove
	check for process status.  Will be performed by the respective
	action now.  Reported by Ted Stern <stern+tramp-devel@cray.com>.

2004-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-uu.el (tramp-uuencode-region): Padding characters aren't
	counted for (last) line.  Reported by Aaron Ucko
	<ucko@ncbi.nlm.nih.gov>.

	* Makefile.in (TODO): New item, inspired by Kai's change.

2004-05-16  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* tramp.el (tramp-completion-file-name-regexp-unified): Avoid
	matching filenames starting with "/:" -- those are reserved for
	file-name-non-special.

2004-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-one-action)
	(tramp-process-one-multi-action, tramp-wait-for-regexp)
	(tramp-wait-for-output): Throw away if process has died. Reported
	by Luc Teirlinck <teirllm@dms.auburn.edu>.

2004-05-12  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* tramp.el (tramp-initial-commands): Add "unset HISTFILE"; this is
	not really necessary but seems to keep the shell history smaller
	in some cases.  It is no substitute for setting HISTFILE and
	HISTSIZE from tramp-open-connection-setup-interactive-shell,
	though.  Suggested by Luc Teirlinck.
	(tramp-open-connection-setup-interactive-shell): Export variables
	HISTFILE and HISTSIZE, do not just set them.  From Luc Teirlinck.

2004-05-02  Kai Grossjohann  <kgrossjo@eu.uu.net>

	Version 2.0.40 released.

2004-05-01  Michael Albinus  <michael.albinus@gmx.de>

	Suppress byte-compiler warnings were possible.
